repository tests